--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -5,4 +5,4 @@ BREEZE_API_KEY = "27950~3`117604n677U9147=2$66g244"
 BREEZE_API_SECRET = "072291nX0A7o194H7766477l67W495C5"
 
 # Optional: set a default session token (you'll still update daily)
-# BREEZE_SESSION_TOKEN = "54687256"
+# BREEZE_SESSION_TOKEN = "0"
