--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,8 +1,8 @@
 # Set these ONCE in Streamlit Cloud Dashboard → Settings → Secrets
 # Or locally in .streamlit/secrets.toml
 
-BREEZE_API_KEY = "27950~3`117604n677U9147=2$66g244"
-BREEZE_API_SECRET = "072291nX0A7o194H7766477l67W495C5"
+BREEZE_API_KEY = ""
+BREEZE_API_SECRET = ""
 
 # Optional: set a default session token (you'll still update daily)
-# BREEZE_SESSION_TOKEN = "0"
+# BREEZE_SESSION_TOKEN = ""
